# bc-voting-system

./: .gitignore
backend/: Cargo.toml  Config.toml
backend/src/: main.rs
backend/src/auth/: handlers.rs  jwt.rs
backend/src/models/: models.rs
backend/src/smart_contracts/: mod.rs  solana.rs
backend/src/smart_contracts/voter_registration/: handlers.rs
backend/src/smart_contracts/voting_system/: handlers.rs
smart_contracts/: .gitignore  Anchor.toml
smart_contracts/programs/voter_count/: Cargo.toml
smart_contracts/programs/voter_count/src/: errors.rs  instructions.rs  lib.rs  state.rs
smart_contracts/programs/voter_registration/: Cargo.toml
smart_contracts/programs/voter_registration/src/: errors.rs  instructions.rs  lib.rs  state.rs
smart_contracts/programs/voting_system/: Cargo.toml
smart_contracts/programs/voting_system/src/: errors.rs  instructions.rs  lib.rs  state.rs
smart_contracts/tests/: smart_contracts.ts
