[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]

#Smart Contracts
voter_registration = {path = "../smart_contracts/programs/voter_registration"}
voting_system = {path = "../smart_contracts/programs/voting_system"}

salvo = "0.66.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
anchor-client = "0.30.0"
toml = "0.8.14"
env_logger = "0.11.3"
log = "0.4.21"
signature = "1.6.4"
borsh = "1.5.1"
anyhow = "1.0.86"
shellexpand = "3.1.0"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"